syntax = "proto3";
option go_package = "notespb";
package storage;

import "google/api/annotations.proto";

message Note {
    string id = 1;
    string title = 2;
    string content = 3;
    string author_id = 4;
}

message CreateNote {
    string title = 2;
    string content = 3;
    string author_id = 4;
}

message CreateNoteRequest {
    CreateNote note = 1;
};

message CreateNoteResponse {
    Note note = 1;
};

message ReadNoteRequest {
    string id = 1;
};

message ReadNoteResponse {
    Note note = 1;
};

message StringMessage {
    string value = 1;
}

service NoteService {
    rpc CreateNote (CreateNoteRequest) returns (CreateNoteResponse) {
        option (google.api.http) = {
            post: "/v1/notes"
            body: "*"
        };
    }
    rpc ReadNote (ReadNoteRequest) returns (ReadNoteResponse) {
        option (google.api.http) = {
            get: "/v1/notes/{id}"
        };
    }
};